k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zk-wsp-client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zk-wsp-client
  template:
    metadata:
      labels:
        app: zk-wsp-client
    spec:
      containers:
        - name: zk-wsp-client
          image: us-west1-docker.pkg.dev/zerok-dev/stage/zk-wsp-client:0.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8981

---

apiVersion: v1
kind: Service
metadata:
  name: zk-wsp-client-service
spec:
  selector:
    app: zk-wsp-client
  ports:
    - protocol: TCP
      port: 8981
      targetPort: 8981
  type: ClusterIP
