k8s/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zk-wsp-server-deployment
  namespace: zkcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zk-wsp-server
  template:
    metadata:
      labels:
        app: zk-wsp-server
    spec:
      containers:
        - name: zk-wsp-server
          image: us-west1-docker.pkg.dev/zerok-dev/stage/zk-wsp-server:0.0.2
          ports:
            - containerPort: 32080

---

apiVersion: v1
kind: Service
metadata:
  name: zk-wsp-server-service
  namespace: zkcloud
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"8989":"zk-backend-config"}}'
spec:
  type: NodePort
  selector:
    app: zk-wsp-server
  ports:
    - protocol: TCP
      port: 8989
      targetPort: 32080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ws-ingress
  namespace: zkcloud
  annotations:
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
      location /w/register {
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_http_version 1.1;
        proxy_set_header Upgrade $http_upgrade;
        proxy_set_header Connection "upgrade";
        proxy_set_header Host $host;
       }
spec:
  ingressClassName: nginx
  rules:
    - host: zkdev02.getanton.com
      http:
        paths:
          - path: /w/register
            pathType: Prefix
            backend:
              service:
                name: zk-wsp-server-service
                port:
                  number: 8989
